Update cell for streamlit

--- a/launcher.ipynb
+++ b/launcher.ipynb
@@ -35,18 +35,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Run application \n",
-    "Run the following command to launch demo application. This runs the application to run on port 8081, restrict maximum file size for upload to 10MB. Both settings can be changed.\n",
-    "\n",
-    "```bash\n",
-    "streamlit run AWS_Podcast_Generator.py --server.port 6006 --server.maxUploadSize 10\n",
-    "```"
+    "Run the following command to launch demo application. This runs the application to run on port 8081, restrict maximum file size for upload to 10MB. Both settings can be changed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!streamlit run AWS_Podcast_Generator.py --server.port 6006 --server.maxUploadSize 10"
    ]
   },
   {
@@ -104,41 +104,6 @@
     "app_url = f'{studio_url}/proxy/{proxy_port}/'\n",
     "HTML(f\"<a href='{app_url}'>Click to launch on New SageMaker Studio</a>\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Stop & Clean-up\n",
-    "To stop the application, go to terminal and kill the application Ctrl +C\n",
-    "Deactivate conda environment created to exit out\n",
-    "\n",
-    "```bash\n",
-    "conda deactivate \n",
-    "```\n",
-    "\n",
-    "You can view all conda environments by running this command\n",
-    "```bash\n",
-    "conda env list\n",
-    "```\n",
-    "\n",
-    "Remove the environment created\n",
-    "\n",
-    "```bash\n",
-    "conda remove --name aws-notebooklm-app --all\n",
-    "```\n",
-    "\n",
-    "To verify that the environment was removed, run\n",
-    "```bash\n",
-    "conda info --envs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
